solc_mutator_ossfuzz_seed_corpus/test_sol/test_3108ac24083918e18e4cb4055c412723b9a33f52f9e8346396d5515ab1319649_95de367542a26445d8c529dbbc4a775ce30036c7_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bytes19 i0,bool i1)  returns(address o0)
{


  {
  }

}
function f1(bytes memory i0,bool i1)  returns(bool o0)
{

  {







  }
  {
{




}
(address l0) = f0(0xf674e11f5aa6b5d125404734fd4c81821183b2,(((-3089499 | 5287970) % (~(2514345) / 1855700)) == (-(5079652) / 6139581)));

{
}
  }
  (address l1) = f0(0x1850af52e921f6cdeaa961acfb4b96a121f4f9,(true && false));
}
contract C0 {
  function f2(C0 i0,C0 i1,bytes32 i2) external returns(uint120 o0,int96 o1)
  { }
}
// ----
// TypeError 2271: (su0.sol:225-298): Operator == not compatible with types rational_const -180857 / 927850 and rational_const -5079652 / 6139581
